--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,11 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
+      <h1 class="mt-5">OMG you will not believe me but...</h1>
+      <h1 class="mt-5" id="excuse">My dog has eaten my homework</h1>
+      <button id="button" class="btn btn-outline-primary">
+        Generate New Excuse
+      </button>
       <div class="fixed-bottom p-4">
         Made with ❤️ by
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
